package com.example.kanban.model;

public enum TaskStatus {
    TODO,
    IN_PROGRESS,
    DONE
}
